force-app/main/default/objects/Clima__c/Clima__c.object-meta.xml
<CustomObject>
    <description>El clima es el registro de las condicines climáticas para un aeropuertoen un momento determinado. Se guarda 24 horas antes de realizar cada vuelo.</description>
    <label>Clima</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Nombre de Clima</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Climas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>