force-app/main/default/objects/Clima__c/fields/Fecha_y_Hora_Prediccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_Hora_Prediccion__c</fullName>
    <description>Indica el momento exacto en el que fue tomada la temperatura</description>
    <label>Fecha y Hora Prediccion</label>
    <type>DateTime</type>
</CustomField>