force-app/main/default/objects/Clima__c/fields/Temperatura__c.field-meta.xml
<CustomField>
    <fullName>Temperatura__c</fullName>
    <description>Numero de grados registrados en un momento exacto</description>
    <inlineHelpText>Solo ingresar numeros enteros sin unidad de medida</inlineHelpText>
    <label>Temperatura</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>