force-app/main/default/objects/Clima__c/fields/Unidad_de_Medida__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_Medida__c</fullName>
    <description>Unidad de medida de la toma de temperatura en un aeropuerto dado</description>
    <label>Unidad de Medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centigrados</fullName>
            </value>
            <value>
                <fullName>Farenheit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>